Software/PSOC/Projekt_PSoC_Kode/Projekt_PSoC_Kode.cydsn/BUILD.log
--------------- Build Started: 04/28/2019 15:35:31 Project: Projekt_PSoC_Kode, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
The code generation step is up to date.
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/Gyro.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -x c++ -std=c++1z -fno-exceptions -c Gyro.c -o .\CortexM3\ARM_GCC_541\Debug\Gyro.o
In file included from Gyro.c:15:0:
Gyro.h:79:9: error: 'void Gyro::readGyroData(gyro_data*)' cannot be overloaded
    void readGyroData(gyro_data* gp);
         ^
Gyro.h:75:9: error: with 'void Gyro::readGyroData(gyro_data*)'
    void readGyroData(gyro_data*);
         ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Build Failed: 04/28/2019 15:35:31 ---------------
